--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1"
   }
