--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
     "cloudinary": "^2.5.1",
+    "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
